# dockerize-poetry

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: pre-commit-autoupdate.yml  tests.yml
src/dockerize_poetry/: __init__.py  core.py
tests/: __init__.py  test_dockerize_poetry.py
